--- a/confd/conf.d/haproxy.toml
+++ b/confd/conf.d/haproxy.toml
@@ -1,5 +1,4 @@
 [template]
-prefix = "haproxy-discover"
 keys = [
   "services",
   "tcp-services"
@@ -8,8 +7,7 @@ keys = [
 owner = "haproxy"
 mode = "0644"
 src = "haproxy.tmpl"
-dest = "/etc/haproxy/haproxy.cfg"
+dest = "/usr/local/etc/haproxy/haproxy.cfg"
 
-check_cmd = "/usr/sbin/haproxy -c -f {{ .src }}"
-reload_cmd = "haproxy -f /etc/haproxy/haproxy.cfg -p /var/run/haproxy.pid -D -sf $(cat /var/run/haproxy.pid)"
-
+check_cmd = "/usr/local/sbin/haproxy -c -f {{ .src }}"
+reload_cmd = "/usr/local/sbin/haproxy -f /usr/local/etc/haproxy/haproxy.cfg -p /var/run/haproxy.pid -D -sf $(cat /var/run/haproxy.pid)"
