Use uid/gid instead of owner in confd template-resource

--- a/confd/conf.d/haproxy.toml
+++ b/confd/conf.d/haproxy.toml
@@ -4,7 +4,8 @@ keys = [
   "tcp-services"
 ]
 
-owner = "haproxy"
+uid = 0
+gid = 0
 mode = "0644"
 src = "haproxy.tmpl"
 dest = "/usr/local/etc/haproxy/haproxy.cfg"
