Add key prefix support to avoid collision between LBs

--- a/confd/conf.d/haproxy.toml.in
+++ b/confd/conf.d/haproxy.toml.in
@@ -1,8 +1,8 @@
 [template]
 keys = [
-  "services",
-  "tcp-services",
-  "config"
+  "%%PREFIX%%/services",
+  "%%PREFIX%%/tcp-services",
+  "%%PREFIX%%/config"
 ]
 
 uid = 0
